--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ eureka.client.region=us-east-1
 
 # Enter your list of Eureka Servers here, comma separated. You MUST use the full DNS names that the servers will have
 # Form: http://ec2-xxx-xxx-xxx-xxx.region.compute.amazonaws.com:8010/eureka/
-eureka.client.serviceUrl.defaultZone=http://ec2-35-169-60-219.compute.amazonaws.com, http://ec2-35-175-18-96.compute.amazonaws.com
+eureka.client.serviceUrl.defaultZone=http://ec2-35-169-60-219.compute-1.amazonaws.com, http://ec2-35-175-18-96.compute-1.amazonaws.com
