--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,2 @@
 spring.application.name=fleetman-registry
-eureka.instance.instanceId=${sping.application.name}:{random.value}
+eureka.instance.instanceId=${sping.application.name}:${random.value}
